--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "i18next-browser-languagedetector": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropdown": "^1.11.0",
     "react-i18next": "^12.1.4",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
